--- a/src/AppHeader/RedditHeader.css
+++ b/src/AppHeader/RedditHeader.css
@@ -2,7 +2,7 @@
 
   width: 100%;
   height: 15%;
-  border: 0.1px white solid;
+  border: 0.1px rgb(34, 28, 28) double;
   display: flex;
   background-color: black;
   
