--- a/src/Body/BodySection.css
+++ b/src/Body/BodySection.css
@@ -2,5 +2,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    height: 80%;
+    max-height: 100vh;
+    overflow: auto;
 }
