--- a/src/Body/Post/PostSection.css
+++ b/src/Body/Post/PostSection.css
@@ -1,8 +1,7 @@
 .PostSection {
-    background-color:black;
-    border-left: 0.1px white solid;
-    width: 70%;
-
+    background-color:rgb(38, 2, 2);
+    width: 100%;
+    height: 100vh;
 }
 
 .PostSection > .Post{
@@ -10,7 +9,6 @@
     display: flex;
     flex-direction: column;
     margin-left: 10px;
-    margin-top: 50px;
     margin-bottom: 10px;
 }
 
