--- a/src/Body/Post/PostSection.css
+++ b/src/Body/Post/PostSection.css
@@ -1,7 +1,7 @@
 .PostSection {
     background-color:rgb(38, 2, 2);
     width: 100%;
-    height: 100vh;
+    overflow: scroll;
 }
 
 .PostSection > .Post{
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .PostSection > .Post:hover{
