--- a/src/Login/LoginPage.css
+++ b/src/Login/LoginPage.css
@@ -1,9 +1,8 @@
 .user-login-root{
 
-  background-color: black;
   min-height: 100vh;
   padding: 10vh;
-  background-color: rgb(109, 8, 8);
+  background-color: rgb(25, 3, 52);
 
   display: flex;
   flex-direction: row;
@@ -12,17 +11,16 @@
 .header-form{
 
   max-width: fit-content;
-  max-height: fit-content;
+  height: 80%;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  border: 0.1px solid black;
+  
+  background-color: rgb(29, 29, 59);
+  border: 0.1px solid rgb(97, 113, 234);
   padding: 50px;
-  box-shadow : 2px 2px 5px black;
-
-  height: 80%;
+  box-shadow : 1px 1px 5px black;
 }
 
 .header-form > .header{
